--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   }
 
   async function getBookingDates(id) {
-    const r = await fetch(${API_BASE}/booking/${encodeURIComponent(id)}, { cache:"no-store" });
-    if (!r.ok) throw new Error(Server ${r.status});
+    const r = await fetch(`${API_BASE}/booking/${encodeURIComponent(id)}`, { cache:"no-store" });
+    if (!r.ok) throw new Error(`Server ${r.status}`);
     const j = await r.json();
     if (!j.ok || !j.start || !j.end) throw new Error(j.error || "Dati prenotazione non validi");
     return { arrival: new Date(j.start), departure: new Date(j.end) };
@@ -57,7 +57,7 @@
 
       if (!allowed) {
         const el = document.getElementById('neaMsg');
-        el.textContent = 🚪 La porta si apre solo tra ${fmt(arrival)} e ${fmt(departure)}.;
+        el.textContent = `🚪 La porta si apre solo tra ${fmt(arrival)} e ${fmt(departure)}.`;
         document.getElementById('neaModal').style.display = 'flex';
         return;
       }
@@ -66,7 +66,7 @@
       const resp = await fetch(${API_BASE}/open/${encodeURIComponent(bookingId)}, { method:"GET", cache:"no-store" });
       const tg = await resp.json().catch(() => ({}));
       if (!(resp.ok && tg && tg.ok)) {
-        const reason = (tg && (tg.description || tg.error)) || HTTP ${resp.status};
+        const reason = (tg && (tg.description || tg.error)) || `HTTP ${resp.status}`;
         alert("⚠ Invio Telegram fallito: " + reason);
       } else {
         // feedback discreto
