--- a/index.html
+++ b/index.html
@@ -5,80 +5,88 @@
   <title>Apri Porta - NEASPACE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif; margin:0; background:#EAF6FF; color:#111; text-align:center; }
-    .button-container { text-align:center; margin-top:50px; }
-    .slider-btn { font-size:22px; padding:20px 40px; border-radius:12px; background:#0088cc; color:#fff; border:none; cursor:pointer; }
-    .nea-modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.45);z-index:9999}
-    .nea-modal .box{background:#fff;border-radius:14px;padding:22px 24px;max-width:520px;box-shadow:0 10px 30px rgba(0,0,0,.2);text-align:center}
-    .nea-modal .box h3{margin:0 0 10px;font-size:22px}
-    .nea-modal .box p{margin:0 0 16px;font-size:16px;line-height:1.5}
-    .nea-modal .box button{padding:10px 16px;border:0;border-radius:10px;cursor:pointer;background:#111;color:#fff}
+    body {
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      margin: 0; background: #EAF6FF; color: #111; text-align: center;
+    }
+    .wrap { max-width: 900px; margin: 0 auto; padding: 64px 18px; }
+    h2 { font-size: 28px; line-height: 1.5; margin: 0; }
+    .muted { color:#666; font-size:14px; margin-top:12px }
   </style>
 </head>
 <body>
-  <div class="button-container">
-    <button class="slider-btn" id="openBtn">Click to Open</button>
-  </div>
-
-  <div id="neaModal" class="nea-modal" role="dialog" aria-modal="true">
-    <div class="box">
-      <h3>Accesso non disponibile</h3>
-      <p id="neaMsg">🚪 La porta si apre solo nelle date del tuo booking.</p>
-      <button onclick="document.getElementById('neaModal').style.display='none'">Ok</button>
-    </div>
+  <div class="wrap">
+    <h2 id="msg">⏳ Controllo prenotazione...</h2>
+    <p id="sub" class="muted"></p>
   </div>
 
   <script>
-  const API_BASE = "https://one9rueneuve.onrender.com";
-  const fmt = d => d.toLocaleDateString('it-IT', {day:'2-digit', month:'2-digit', year:'numeric'});
-  const sameDay = d => { const x = new Date(d); x.setHours(0,0,0,0); return x; };
+    const API_BASE = "https://one9rueneuve.onrender.com";
 
-  function getBookingIdFromQuery() {
-    const b = new URL(location.href).searchParams.get('b');
-    return b ? b.replace(/\D/g,'') : null;
-  }
+    const fmt = d => d.toLocaleDateString('it-IT', { day:'2-digit', month:'2-digit', year:'numeric' });
+    const sameDay = d => { const x = new Date(d); x.setHours(0,0,0,0); return x; };
 
-  async function getBookingDates(id) {
-    const r = await fetch(`${API_BASE}/booking/${encodeURIComponent(id)}`, { cache:"no-store" });
-    if (!r.ok) throw new Error(`Server ${r.status}`);
-    const j = await r.json();
-    if (!j.ok || !j.start || !j.end) throw new Error(j.error || "Dati prenotazione non validi");
-    return { arrival: new Date(j.start), departure: new Date(j.end) };
-  }
+    function getBookingIdFromQuery() {
+      const b = new URL(location.href).searchParams.get('b');
+      return b ? b.replace(/\D/g,'') : null;
+    }
 
-  async function openDoor() {
-    try {
+    async function getBookingDates(id) {
+      const r = await fetch(`${API_BASE}/booking/${encodeURIComponent(id)}`, { cache:"no-store" });
+      if (!r.ok) throw new Error(`Server ${r.status}`);
+      const j = await r.json();
+      if (!j.ok || !j.start || !j.end) throw new Error(j.error || "Dati prenotazione non validi");
+      return { arrival: new Date(j.start), departure: new Date(j.end) };
+    }
+
+    async function init() {
+      const msg = document.getElementById('msg');
+      const sub = document.getElementById('sub');
+
       const bookingId = getBookingIdFromQuery();
-      if (!bookingId) { alert("❌ Booking ID mancante (?b=...)"); return; }
-
-      const { arrival, departure } = await getBookingDates(bookingId);
-      const today = sameDay(new Date());
-      const allowed = today >= sameDay(arrival) && today <= sameDay(departure);
-
-      if (!allowed) {
-        const el = document.getElementById('neaMsg');
-        el.textContent = `🚪 La porta si apre solo tra ${fmt(arrival)} e ${fmt(departure)}.`;
-        document.getElementById('neaModal').style.display = 'flex';
+      if (!bookingId) {
+        msg.textContent = "❌ Booking ID mancante (?b=...)";
         return;
       }
 
-      // Siamo dentro le date: invia Telegram tramite il backend (nessun CORS, nessun token esposto)
-      const resp = await fetch(${API_BASE}/open/${encodeURIComponent(bookingId)}, { method:"GET", cache:"no-store" });
-      const tg = await resp.json().catch(() => ({}));
-      if (!(resp.ok && tg && tg.ok)) {
-        const reason = (tg && (tg.description || tg.error)) || `HTTP ${resp.status}`;
-        alert("⚠ Invio Telegram fallito: " + reason);
-      } else {
-        // feedback discreto
-        console.log("✅ Telegram inviato:", tg);
-      }
-    } catch (e) {
-      console.error(e);
-      alert("⚠ Errore: " + (e.message || "imprevisto"));
-    }
-  }
+      try {
+        // 1) Leggo le date dal backend
+        const { arrival, departure } = await getBookingDates(bookingId);
+        const today = sameDay(new Date());
+        const allowed = today >= sameDay(arrival) && today <= sameDay(departure);
 
-  document.getElementById('openBtn').addEventListener('click', openDoor);
+        if (!allowed) {
+          msg.textContent = `🚪 La porta si apre solo tra ${fmt(arrival)} e ${fmt(departure)}.`;
+          sub.textContent = "Se hai bisogno di assistenza contattaci pure.";
+          return;
+        }
+
+        // 2) Dentro la finestra: invio telegram via backend (niente popup)
+        msg.textContent = "🔓 Apertura in corso...";
+        sub.textContent = "Un attimo mentre inviamo la richiesta.";
+
+        const resp = await fetch(`${API_BASE}/open/${encodeURIComponent(bookingId)}`, {
+          method: "GET",
+          cache: "no-store"
+        });
+        const tg = await resp.json().catch(() => ({}));
+
+        if (resp.ok && tg && tg.ok) {
+          msg.innerHTML = "🌞 La porta è aperta! Sali al secondo piano, porta destra, codice 0204.";
+          sub.textContent = "Mandaci un messaggino per confermare che siete a casa!";
+        } else {
+          const reason = (tg && (tg.description || tg.error)) || `HTTP ${resp.status}`;
+          msg.textContent = "⚠️ Invio Telegram fallito.";
+          sub.textContent = `Dettagli: ${reason}`;
+        }
+      } catch (e) {
+        msg.textContent = "⚠️ Errore durante il controllo prenotazione.";
+        sub.textContent = e.message || "Imprevisto.";
+        console.error(e);
+      }
+    }
+
+    window.onload = init;
   </script>
 </body>
 </html>
